k8s/wally-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django
          image: mjrwt69/wally:v2
          ports:
            - containerPort: 8000

          volumeMounts:
            - name: media-volume
              mountPath: /app/media   # 👈 THIS is the key

          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20

      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: django-media-pvc
